; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/winsrv/consrv_new/frontends/gui/extr_guiterm.c_GuiConsoleCreateSysMenu.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/winsrv/consrv_new/frontends/gui/extr_guiterm.c_GuiConsoleCreateSysMenu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@GuiConsoleMainMenuItems = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @GuiConsoleCreateSysMenu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GuiConsoleCreateSysMenu(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @FALSE, align 4
  %7 = call i32* @GetSystemMenu(i32 %5, i32 %6)
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32*, i32** %4, align 8
  %12 = load i32, i32* @GuiConsoleMainMenuItems, align 4
  %13 = call i32 @GuiConsoleAppendMenuItems(i32* %11, i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @DrawMenuBar(i32 %14)
  br label %16

16:                                               ; preds = %10, %1
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32* @GetSystemMenu(i32, i32) #1

declare dso_local i32 @GuiConsoleAppendMenuItems(i32*, i32) #1

declare dso_local i32 @DrawMenuBar(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
